--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://127.0.0.1:27017
+MONGO_URI=mongodb+srv://devmehrabhossain:bfKhIf4TMnqqhNOv@usersdb.3zsdaxd.mongodb.net/usersDB?retryWrites=true&w=majority&appName=usersDB
